--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
