--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^6.6.1",
     "@turf/turf": "^6.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
